<resources>
    <string name="app_name">SurfSwift</string>
    <string name="enter_url">Enter Url</string>
    <string name="go_button">Go Button</string>
    <string name="setting_btn">Settings Button</string>
    <string name="search_hint">Search</string>
    <string name="settings">Settings</string>
    <string name="homepage">HomePage</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">FullScreen</string>
    <string name="save">Save</string>
    <string name="desktop">Desktop</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="view_all">View All</string>
    <string name="all_bookmarks">All Bookmarks</string>
    <string name="refresh_btn">\nRefresh Button</string>


</resources>