<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:paddingHorizontal="5dp"

                android:background="@drawable/custom_design"
                android:hint="@string/enter_url" />

            <ImageButton
                android:id="@+id/goBtn"
                android:contentDescription="@string/go_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_forward"
                android:background="?attr/selectableItemBackground"
                app:tint="@color/black" />

        </LinearLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:visibility="gone"
            app:indicatorColor="@color/cool_blue"
            android:scaleY="0.5"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/myPager"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        android:contentDescription="@string/setting_btn"
        android:src="@drawable/ic_settings"
        android:backgroundTint="@color/white"
        app:layout_constraintVertical_bias="0.9"/>



</androidx.constraintlayout.widget.ConstraintLayout>